--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,61 @@
                         aria-label="Search">
                     <button class="btn btn-black border-warning btn-search" type="submit">SEARCH</button>
                 </form>
-
+                <!-- cart -->
+                <div class="container-icon">
+                    <div class="container-cart-icon">
+    
+                        <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke-width="1.5"
+                        stroke="currentColor"
+                        class="icon-cart"
+                        >
+                        <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"
+                        />
+                        </svg>
+                        <div class="count-products">
+                            <span id="contador-productos">0</span>
+                        </div>
+                    </div>
+    
+                    <div class="container-cart-products hidden-cart">
+                        <div class="row-product">
+                            <div class="cart-product">
+                                <div class="info-cart-product">
+                                    <span class="cantidad-producto-carrito"></span>
+                                    <p class="titulo-producto-carrito"></p>
+                                    <span class="precio-producto-carrito"></span>
+                                </div>
+                                <!-- <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                stroke-width="1.5"
+                                stroke="currentColor"
+                                class="icon-close"
+                                >
+                                <path
+                                stroke-linecap="round"
+                                stroke-linejoin="round"
+                                d="M6 18L18 6M6 6l12 12"
+                                />
+                            </svg> -->
+                        </div>
+                    </div>
+                        <div class="cart-total hidden">
+                            <h3></h3>
+                            <span class="total-pagar"></span>
+                        </div>
+                        <p class="cart-empty" style="display: block;">El carrito está vacío</p>
+                    </div>
+                </div>
+                <!--  -->
             </div>
         </div>
     </nav>
@@ -150,7 +204,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous">
+    </script>
+    <script src="../assets/Js/main.js"></script>
 </body>
 
 </html>
