--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -104,13 +104,17 @@
                                     d="M6 18L18 6M6 6l12 12"
                                     />
                                 </svg> -->
+                                </div>
                             </div>
-                        </div>
+                            <div class="container-cart-empty">                          
+                                <img src="../assets/images/cart-empty.svg" alt="" srcset="" class="img-cart-empty">
+                                <p class="cart-empty" >El carrito está vacío</p>
+                            </div>
                             <div class="cart-total hidden">
                                 <h3></h3>
                                 <span class="total-pagar"></span>
                             </div>
-                            <p class="cart-empty" style="display: block;">El carrito está vacío</p>
+                            
                         </div>
                     </div>
                     <!--  -->
