--- a/pages/menu.html
+++ b/pages/menu.html
@@ -104,13 +104,26 @@
                                     d="M6 18L18 6M6 6l12 12"
                                     />
                                 </svg> -->
+                                </div>
                             </div>
-                        </div>
+                            <div class="container-cart-empty">
+                            
+                            <img src="../assets/images/cart-empty.svg" alt="" srcset="" class="img-cart-empty">
+                            <p class="cart-empty" >El carrito está vacío</p>
+                            </div>
                             <div class="cart-total hidden">
                                 <h3></h3>
                                 <span class="total-pagar"></span>
                             </div>
-                            <p class="cart-empty" style="display: block;">El carrito está vacío</p>
+                            <div class="container-btn-cart text-center ">
+                                <button class="btn btn-warning border-none btn-sm text-center" type="button"> 
+                                    <a href="./carrito.html" class="text-black text-decoration-none px-2">Ir a mi carrito</a>
+                                </button>
+                                <button class="btn btn-warning border-none btn-sm text-center" type="button"> 
+                                    <a href="./carrito.html" class="text-black text-decoration-none px-2">Pagar ahora</a>
+                                </button>
+
+                            </div>
                         </div>
                     </div>
                     <!--  -->
@@ -192,7 +205,7 @@
                     </div>
                     <div class="col text-center border border-secondary py-3 my-2 products-items">
                         <img loading="lazy" src="../assets/images/f-2.png" alt="" srcset="" class="coffee">
-                        <p>Empanadas de champiñon</p>
+                        <p>Rollos de champiñon</p>
                         <h5>$4.99</h5>
                         <button class="btn btn-warning text-uppercase fw-bold btn-add-cart">Agregar</button>
                     </div>
