agregando a todas las secciones

--- a/index.html
+++ b/index.html
@@ -110,15 +110,22 @@
                             </div>
                             <div class="container-cart-empty">
                             
-                                <img src="../assets/images/cart-empty.svg" alt="" srcset="" class="img-cart-empty">
-                                <p class="cart-empty" >El carrito está vacío</p>
+                            <img src="../assets/images/cart-empty.svg" alt="" srcset="" class="img-cart-empty">
+                            <p class="cart-empty" >El carrito está vacío</p>
                             </div>
-
                             <div class="cart-total hidden">
                                 <h3></h3>
                                 <span class="total-pagar"></span>
                             </div>
-                            
+                            <div class="container-btn-cart text-center ">
+                                <button class="btn btn-warning border-none btn-sm text-center" type="button"> 
+                                    <a href="./carrito.html" class="text-black text-decoration-none px-2">Ir a mi carrito</a>
+                                </button>
+                                <button class="btn btn-warning border-none btn-sm text-center" type="button"> 
+                                    <a href="./carrito.html" class="text-black text-decoration-none px-2">Pagar ahora</a>
+                                </button>
+
+                            </div>
                         </div>
                     </div>
                     <!--  -->
